[metadata]
name = tindhl
version = 0.0.1
author = Chrismettal
author_email = chrismettal@binary-6.de
description = DHL label consolidator for printing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrismettal/tindhl
project_urls =
    Bug Tracker = https://github.com/Chrismettal/tindhl/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = tindhl
python_requires = >=3.6

[options.packages.find]
where = tindhl

[options.entry_points]
console_scripts =
    tindhl = tindhl.__main__:main